deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
      - name: devops-app
        image: shashikant0187/devops-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
